--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Mehmet Arda Sümbül</title>
         <link rel="stylesheet" href="/css/style.css">
-        <link rel="shortcut icon" href="/media/favicon.ico">
+        <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png">
     </head>
     <body>
         <image src="/media/avataaars.png"></image>
