main pic and text
Main picture and main text is added.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png">
     </head>
     <body>
-        <image src="/media/avataaars.png"></image>
+        <div>
+            <image src="/media/avataaars.png"></image>
+        </div>
+        
+        <h1 id="first_intro">Hi, I'm Mehmet Arda Sümbül</h1>
+        <image id="mountain_1"src="/media/blue_mountain.png"></image>
+
     </body>
 </html>
