containers are added to main page
three different containers are added to main page and some little changes

--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png">
     </head>
     <body>
-        <div>
+        <div class="navbar">
             <image src="/media/avataaars.png"></image>
         </div>
         
-        <h1 id="first_intro">Hi, I'm Mehmet Arda Sümbül</h1>
-        <image id="mountain_1"src="/media/blue_mountain.png"></image>
+        <div class="top-container">
+            <h1 id="first_intro">Hi, I'm Mehmet Arda Sümbül</h1>
+            <image id="mountain_1"src="/media/blue_mountain.png"></image>   
+        </div>
+        <div class="middle-container">
 
+        </div>
+        <div class="bottom-container">
+
+        </div>
     </body>
 </html>
