--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <image id="mountain_1"src="/media/blue_mountain.png"></image>   
         </div>
         <div class="middle-container">
-
+            <image id="mountain_2"src="/media/brown_mountain.png"></image>  
         </div>
         <div class="bottom-container">
-
+            <image id="mountain_3"src="/media/grey_mountain.png"></image>  
         </div>
     </body>
 </html>
