--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Mehmet Arda Sümbül</title>
         <link rel="stylesheet" href="/css/style.css">
         <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Sacramento&display=swap" rel="stylesheet">
     </head>
     <body>
         <div class="navbar">
@@ -13,6 +15,7 @@
         
         <div class="top-container">
             <h1 id="first_intro">Hi, I'm Mehmet Arda Sümbül</h1>
+            <h2>I'm a computer science student at Ozyegin University</h2>
             <image id="mountain_1"src="/media/blue_mountain.png"></image>   
         </div>
         <div class="middle-container">
