Skills part is added
skills part is added and designed

--- a/index.html
+++ b/index.html
@@ -19,6 +19,22 @@
             <image id="mountain_1"src="/media/blue_mountain.png"></image>   
         </div>
         <div class="middle-container">
+            <h2 id="computer-skills">Computer Skills</h2>
+            <ul id="comp-skills-list">
+                <li>MS Office(Word & Excel)&nbsp      ⭐⭐⭐⭐⭐ </li>
+                <li>Java                                     ⭐⭐⭐⭐</li>
+                <li>C++                                      ⭐⭐⭐ </li>
+                <li>MySQL                                    ⭐⭐⭐⭐</li>
+                <li>HTML                                 ⭐⭐⭐⭐⭐ </li>
+                <li>Css                                     ⭐⭐⭐⭐⭐</li>
+                <li>JavaScript                                  ⭐⭐⭐</li>
+            </ul>
+            <h2 id="lang-skills">Language Skills</h2>
+            <ul id="lang-skills-list">
+                <li>Turkish ⭐⭐⭐⭐⭐</li>
+                <li>English ⭐⭐⭐⭐</li>
+                <li>Chinese ⭐⭐</li>    
+            </ul>
             <image id="mountain_2"src="/media/brown_mountain.png"></image>  
         </div>
         <div class="bottom-container">
