Contact with me part is added
Contact with me and linkedIn link is added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" href="/css/style.css">
         <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png">
         <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Sacramento&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Sacramento&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab&display=swap" rel="stylesheet">    
     </head>
     <body>
         <div class="navbar">
@@ -38,7 +40,16 @@
             <image id="mountain_2"src="/media/brown_mountain.png"></image>  
         </div>
         <div class="bottom-container">
-            <image id="mountain_3"src="/media/grey_mountain.png"></image>  
+            <h2 id="contact-h">Contact With Me!</h2>
+            <form action="mailto:arda.sumbul@ozu.edu.tr" method="POST" enctype="text/plain">
+            Your Name: <input type="text" name="yourName"><br><br>
+            Your e-mail: <input type="email" name="yourEmail"><br><br>
+            <textarea rows="20" cols="50" name="yourMessage"></textarea><br>
+            <input type="submit" value="Send">
+        </form>
+        
+        <a href="https://www.linkedin.com/in/mehmet-arda-s%C3%BCmb%C3%BCl-bb1925175/"><image id="linkedin" src="/media/LI-In-Bug.png" href="https://www.youtube.com/watch?v=9QXXyG0hKtI">LinkedIn logo</image></a>
+        <image id="mountain_3"src="/media/grey_mountain.png"></image>
         </div>
     </body>
 </html>
