Medium logo is added
Medium logo is added and some changes are made

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
             <input type="submit" value="Send">
         </form>
         
-        <a href="https://www.linkedin.com/in/mehmet-arda-s%C3%BCmb%C3%BCl-bb1925175/"><image id="linkedin" src="/media/LI-In-Bug.png" href="https://www.youtube.com/watch?v=9QXXyG0hKtI">LinkedIn logo</image></a>
+        <a href="https://www.linkedin.com/in/mehmet-arda-s%C3%BCmb%C3%BCl-bb1925175/"><image class="logos" src="/media/LI-In-Bug.png"></image></a>
+        <a href="https://arda-sumbul.medium.com/"><img src="/media/medium_logo.png" class="logos" id="medium"></a>
         <image id="mountain_3"src="/media/grey_mountain.png"></image>
         </div>
     </body>
