Icons are added
Icons are added and arranged

--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
         <div class="top-container">
             <h1 id="first_intro">Hi, I'm Mehmet Arda Sümbül</h1>
             <h2>I'm a computer science student at Ozyegin University</h2>
+            <image src="/media/cloud.png" id="cloud1"></image>
+            <image src="/media/cloud.png" id="cloud2"></image>
             <image id="mountain_1"src="/media/blue_mountain.png"></image>   
         </div>
         <div class="middle-container">
+            <image id="baloon1" src="/media/hot-air-balloon.png"></image> 
+            <image id="baloon2" src="/media/air-balloon.png"></image> 
             <h2 id="computer-skills">Computer Skills</h2>
             <ul id="comp-skills-list">
                 <li>MS Office(Word & Excel)&nbsp      ⭐⭐⭐⭐⭐ </li>
@@ -40,6 +44,9 @@
             <image id="mountain_2"src="/media/brown_mountain.png"></image>  
         </div>
         <div class="bottom-container">
+            <image id="planet1"src="/media/planet.png"></image>
+            <image id="spaceship"src="/media/startup.png"></image> 
+            <image id="planet2"src="/media/jupiter.png"></image>  
             <h2 id="contact-h">Contact With Me!</h2>
             <form action="mailto:arda.sumbul@ozu.edu.tr" method="POST" enctype="text/plain">
             Your Name: <input type="text" name="yourName"><br><br>
