--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <body>
         <div class="navbar">
             <image src="/media/avataaars.png"></image>
+            <a id="mid_link" href="#mid_container">My Skills</a>
+            <a id="bottom_link" href="#bottom_container">Contact Me</a>
         </div>
         
         <div class="top-container">
@@ -22,7 +24,7 @@
             <image src="/media/cloud.png" id="cloud2"></image>
             <image id="mountain_1"src="/media/blue_mountain.png"></image>   
         </div>
-        <div class="middle-container">
+        <div class="middle-container" id="mid_container">
             <image id="baloon1" src="/media/hot-air-balloon.png"></image> 
             <image id="baloon2" src="/media/air-balloon.png"></image> 
             <h2 id="computer-skills">Computer Skills</h2>
@@ -43,7 +45,7 @@
             </ul>
             <image id="mountain_2"src="/media/brown_mountain.png"></image>  
         </div>
-        <div class="bottom-container">
+        <div class="bottom-container" id="bottom_container">
             <image id="planet1"src="/media/planet.png"></image>
             <image id="spaceship"src="/media/startup.png"></image> 
             <image id="planet2"src="/media/jupiter.png"></image>  
